Fixed the header
Corrected the hairline cutoff on the header element.

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body {
 header {
     background: url(../img/bg-glass.png);
     width: 900px;
-    height: 133px;
+    height: 134px;
     margin: auto;
     position: relative;
 }
